--- a/data/wifimanager.html
+++ b/data/wifimanager.html
@@ -4,7 +4,6 @@
   <title>ESP Wi-Fi Manager</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='icon' type='image/png' href='wifi.png'>
-  <link rel='stylesheet' type="text/css" href='main.css'>   
   <link rel='stylesheet' type="text/css" href='wifimanager.css'>      
   <script src='https://kit.fontawesome.com/890c0c4dba.js' crossorigin='anonymous'></script>   <!-- personal Font Awsome link -->
 </head>
@@ -16,7 +15,7 @@
   <div class="content">   
     <form action="/" method="POST" class="card">
       <div class="form-group">
-        <label for="ssid" class="title">Wifi SSID</label>
+        <label for="ssid" class="title">WiFi SSID</label>
         <input type="text" class="wifiInput" id="ssid" name="ssid">
       </div>
       <div class="form-group">
@@ -24,12 +23,12 @@
         <input type="text" class="wifiInput" id="pass" name="pass">
       </div>
       <div class="form-group">
-        <label for="ip" class="title">Local IP</label>
-        <input type="text" class="wifiInput" id="ip" name="ip" value="192.168.1.213">
+        <label for="router" class="title">Router IP</label>
+        <input type="text" class="wifiInput" id="router" name="router" value="192.168.1.1">
       </div>
       <div class="form-group">
-        <label for="router" class="title">Router IP</label>
-        <input type="text" class="wifiInput" id="router" name="router" value="192.168.1.254">
+        <label for="ip" class="title">ESP IP</label>
+        <input type="text" class="wifiInput" id="ip" name="ip" value="192.168.1.213">
       </div>
       <div class="form-group">
         <label for="host" class="title">Host IP</label>
@@ -38,13 +37,15 @@
       <button type="submit" value="Submit">Submit</button>
     </form>
     <div class="card">
-      <h3>Instructions</h3>
-      <p class="instructions">1. Enter the SSID and password of the network you want to connect to.</p>
-      <p class="instructions">2. Enter the IP address of the router device in this network.</p>
-      <p class="instructions">3. Enter the IP address of the host device running Node-red.</p>
-      <p class="instructions">4. Enter the Local IP addresses of the device (ESP).</p>
-      <p class="instructions">5. Click "Submit" to save the configuration.</p>
-      <p class="instructions">6. The ESP will reboot and connect to the network.</p>
+      <p class="card-title">Instructions</p>
+      <ol>
+        <li>Enter the SSID and password of the network you want to connect to.</li>
+        <li>Enter the IP address of the router device in this network.</li>
+        <li>Enter the IP address of the client device (ESP).</li>
+        <li>Enter the IP address of the host device running Node-red.</li>
+        <li>Click "Submit" to save the configuration.</li>
+        <li>The ESP will reboot and connect to the network.</li>
+      </ol>
     </div>
   </div>
 </body>
